--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section id="welcome">
     <h1>Hello, my name is Sally! </h1>
+    <p>I am an aspiring developer. Here are some of my projects to date.</p>
+    </section>
+
 </body>
 </html>
