--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     <p>I am an aspiring developer. Here are some of my projects to date.</p>
     </section>
 
+    <section id="projects">
+        <h1>Projects</h1>
+        <div>Project 1</div>
+        <div>Project 2</div>
+        <div>Project 2</div>
+
+    </section>
+
 </body>
 </html>
