added contact links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <div>Project 1</div>
         <div>Project 2</div>
         <div>Project 2</div>
+    </section>
 
+    <section ="contact">
+        <h1>Contact</h1>
+        <a href="https://github.com/SMei201900" id="profile-link" target="_blank">Github</a>
+        <a href="https://www.linkedin.com/in/sally-mei-bird01" target="_blank">LinkedIn</a>
     </section>
 
 </body>
