--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#welcome">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contacts">Contact</a></li>
+        </ul>
+    </nav>
+
+
     <section id="welcome">
     <h1>Hello, my name is Sally! </h1>
     <p>I am an aspiring developer. Here are some of my projects to date.</p>
@@ -19,7 +28,7 @@
         <div>Project 2</div>
     </section>
 
-    <section ="contact">
+    <section id="contact">
         <h1>Contact</h1>
         <a href="https://github.com/SMei201900" id="profile-link" target="_blank">Github</a>
         <a href="https://www.linkedin.com/in/sally-mei-bird01" target="_blank">LinkedIn</a>
