wrote an about me section, added a project

--- a/index.html
+++ b/index.html
@@ -10,22 +10,43 @@
     <nav>
         <ul>
             <li><a href="#welcome">Home</a></li>
+            <li> <a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contacts">Contact</a></li>
         </ul>
     </nav>
-
-
+    
     <section id="welcome">
     <h1>Hello, my name is Sally! </h1>
     <p>I am an aspiring developer. Here are some of my projects to date.</p>
     </section>
 
+    <section id="About">
+        <h1>About Me</h1>
+        <p>I build things for web and mobile.</p>
+        <p>Currently training in app development with NPower and pursuing certifications in frontend design and UX/UI. </p>
+        <p>Passionate about codind and design and the intersectionf of them both.</p>
+    </section>
+
+    <section id="skills">
+        <span>HTML/CSS</span>
+        <span>JavaScript</span>
+        <span>Placeholder 1</span>
+        <span>Placeholder 2</span>
+    </section>
+
     <section id="projects">
         <h1>Projects</h1>
-        <div>Project 1</div>
-        <div>Project 2</div>
-        <div>Project 2</div>
+        <div class="project-grid">
+            <div class="project-tile">
+                <div class="project-title">
+                    <h3>Project 1 </h3>
+                </div>
+                <div class="project-image">
+                    <img class="" src="" alt=""> 
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
