--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     </nav>
     
     <section id="welcome">
-    <h1>Hello, my name is Sally! </h1>
-    <p>I am an aspiring developer. Here are some of my projects to date.</p>
+        <h1>Hello, my name is Sally! </h1>
+        <p class="intro-sentence">I am an aspiring developer. Here are some of my projects to date.</p>
+        <span> <a href="#projects">View My Work</a></span>
     </section>
 
-    <section id="About">
+    <section id="about">
         <h1>About Me</h1>
         <p>I build things for web and mobile.</p>
         <p>Currently training in app development with NPower and pursuing certifications in frontend design and UX/UI. </p>
@@ -40,12 +41,32 @@
         <div class="project-grid">
             <div class="project-tile">
                 <div class="project-title">
-                    <h3>Project 1 </h3>
+                    <h3>Tribute Page</h3>
                 </div>
                 <div class="project-image">
-                    <img class="" src="" alt=""> 
+                    <img class="tribute-page-img" src="/images/rosalind-franklin-time-magazine-cover.jpg" alt="Rosalin Franklin as the Cover of Time Magazine"> 
                 </div>
             </div>
+
+            <div class="project-tile">
+                <div class="project-title">
+                    <h3>Project 2</h3>
+                </div>
+                <div class="project-image">
+                    <img class="tribute-page-img" src="/images/rosalind-franklin-time-magazine-cover.jpg" alt="Rosalin Franklin as the Cover of Time Magazine"> 
+                </div>
+            </div>
+
+            <div class="project-tile">
+                <div class="project-title">
+                    <h3>Project 3</h3>
+                </div>
+                <div class="project-image">
+                    <img class="tribute-page-img" src="/images/rosalind-franklin-time-magazine-cover.jpg" alt="Rosalin Franklin as the Cover of Time Magazine"> 
+                </div>
+            </div>
+
+
         </div>
     </section>
 
