--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <ul>
             <li><a href="#welcome">Home</a></li>
             <li> <a href="#about">About</a></li>
