--- a/index.html
+++ b/index.html
@@ -18,23 +18,29 @@
     
     <section id="welcome">
         <h1>Hello, my name is Sally! </h1>
-        <p class="intro-sentence">I am an aspiring developer. Here are some of my projects to date.</p>
+        <p>I am an aspiring developer. Here are some of my projects to date.</p>
         <span> <a href="#projects">View My Work</a></span>
     </section>
 
-    <section id="about">
-        <h1>About Me</h1>
-        <p>I build things for web and mobile.</p>
-        <p>Currently training in app development with NPower and pursuing certifications in frontend design and UX/UI. </p>
-        <p>Passionate about codind and design and the intersectionf of them both.</p>
-    </section>
+    <div id="about-section">
+        <div id="about-left-column">
+            <h1>About Me</h1>
+            <section id="about">
+                <p>I build things for web and mobile.</p>
+                <p>Currently training in app development with NPower and pursuing certifications in frontend design and UX/UI. </p>
+                <p>Passionate about codind and design and the intersectionf of them both.</p>
+            </section>
+        </div>
 
-    <section id="skills">
-        <span>HTML/CSS</span>
-        <span>JavaScript</span>
-        <span>Placeholder 1</span>
-        <span>Placeholder 2</span>
-    </section>
+        <div id="about-right-column">
+            <section id="skills">
+                <div>HTML/CSS</div>
+                <div>JavaScript</div>
+                <div>Placeholder 1</div>
+                <div>Placeholder 2</div>
+            </section>
+        </div>
+    </div>
 
     <section id="projects">
         <h1>Projects</h1>
@@ -44,7 +50,10 @@
                     <h3>Tribute Page</h3>
                 </div>
                 <div class="project-image">
-                    <img class="tribute-page-img" src="/images/rosalind-franklin-time-magazine-cover.jpg" alt="Rosalin Franklin as the Cover of Time Magazine"> 
+                    <img 
+                    class="tribute-page-img" 
+                    src="/images/rosalind-franklin-time-magazine-cover.jpg" 
+                    alt="Rosalin Franklin as the Cover of Time Magazine" /> 
                 </div>
             </div>
 
