--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <section id="welcome">
         <h1>Hello, my name is Sally! </h1>
         <p>I am an aspiring developer. Here are some of my projects to date.</p>
-        <span> <a href="#projects">View My Work</a></span>
+        <div id="view-project-button"> 
+            <a href="#projects">View My Work</a>
+        </div>
     </section>
 
     <div id="about-section">
