styling the about section, troubleshooting phase

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <div id="about-section">
+    <div id="about">
         <div id="about-left-column">
             <h1>About Me</h1>
             <section id="about">
