still styling the about me section

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
     </section>
 
     <div id="about">
-        <div id="about-left-column">
-            <h1>About Me</h1>
-            <section id="about">
+        <h1>About Me</h1>
+        <div id="about-text"> 
+            <div id="about-left-column">
                 <p>I build things for web and mobile.</p>
                 <p>Currently training in app development with NPower and pursuing certifications in frontend design and UX/UI. </p>
                 <p>Passionate about codind and design and the intersectionf of them both.</p>
-            </section>
-        </div>
+            </div>
 
-        <div id="about-right-column">
-            <section id="skills">
-                <div>HTML/CSS</div>
-                <div>JavaScript</div>
-                <div>Placeholder 1</div>
-                <div>Placeholder 2</div>
-            </section>
+            <div id="about-right-column">
+                <section id="skills">
+                    <div>HTML/CSS</div>
+                    <div>JavaScript</div>
+                    <div>Placeholder 1</div>
+                    <div>Placeholder 2</div>
+                </section>
+            </div>
         </div>
     </div>
 
