edited about section

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             <div id="about-left-column">
                 <p>I build things for web and mobile.</p>
                 <p>Currently training in app development with NPower and pursuing certifications in frontend design and UX/UI. </p>
-                <p>Passionate about codind and design and the intersectionf of them both.</p>
+                <p>Passionate about coding and design and the intersection of them.</p>
             </div>
 
             <div id="about-right-column">
                 <section id="skills">
-                    <div>HTML/CSS</div>
-                    <div>JavaScript</div>
-                    <div>Placeholder 1</div>
-                    <div>Placeholder 2</div>
+                    <div class="skill-button">HTML/CSS</div>
+                    <div class="skill-button">JavaScript</div>
+                    <div class="skill-button">Placeholder 1</div>
+                    <div class="skill-button">Placeholder 2</div>
                 </section>
             </div>
         </div>
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contacts">
         <h1>Contact</h1>
         <a href="https://github.com/SMei201900" id="profile-link" target="_blank">Github</a>
         <a href="https://www.linkedin.com/in/sally-mei-bird01" target="_blank">LinkedIn</a>
