--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <nav id="navbar">
         <ul>
@@ -84,6 +90,7 @@
     <section id="contacts">
         <h1>Contact</h1>
         <a href="https://github.com/SMei201900" id="profile-link" target="_blank">Github</a>
+        | 
         <a href="https://www.linkedin.com/in/sally-mei-bird01" target="_blank">LinkedIn</a>
     </section>
 
