--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
         <div class="project-grid">
             <div class="project-tile">
                 <div class="project-title">
-                    <h3>Tribute Page</h3>
+                    <h3>
+                        <a href="https://codesandbox.io/p/sandbox/heuristic-cdn-997vmr"
+                        target="_blank"
+                        >Tribute Page</a>
+                    </h3>
                 </div>
                 <div class="project-image">
                     <img 
@@ -67,23 +71,25 @@
 
             <div class="project-tile">
                 <div class="project-title">
-                    <h3>Project 2</h3>
+                    <h3>
+                        <a href="https://codesandbox.io/p/sandbox/lingering-wave-k554lr?file=%2Findex.html" target="_blank">Survey</a>
+                    </h3>
                 </div>
                 <div class="project-image">
-                    <img class="tribute-page-img" src="/images/rosalind-franklin-time-magazine-cover.jpg" alt="Rosalin Franklin as the Cover of Time Magazine"> 
+                    <img src="/images/survey_icon_by_flaticon.png" alt="Survey Icon"> 
                 </div>
             </div>
 
             <div class="project-tile">
                 <div class="project-title">
-                    <h3>Project 3</h3>
+                    <h3>
+                        <a href="#" target="_blank">Project 3</a>
+                    </h3>
                 </div>
                 <div class="project-image">
-                    <img class="tribute-page-img" src="/images/rosalind-franklin-time-magazine-cover.jpg" alt="Rosalin Franklin as the Cover of Time Magazine"> 
+                    <img src="/images/computer-icon.png" alt="Placeholder Image for Project 3"> 
                 </div>
             </div>
-
-
         </div>
     </section>
 
