--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <div class="project-tile">
                 <div class="project-title">
                     <h3>
-                        <a href="#" target="_blank">Project 3</a>
+                        <a href="https://github.com/SMei201900/bookstore" target="_blank">Bookstore</a>
                     </h3>
                 </div>
                 <div class="project-image">
-                    <img src="/images/computer-icon.png" alt="Placeholder Image for Project 3"> 
+                    <img src="/images/bookstore.png" alt="Bookstore Icon"> 
                 </div>
             </div>
         </div>
