--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </nav>
     
     <section id="welcome">
-        <h1>Hello, my name is Sally! </h1>
+        <div class="typewriter">
+            <h1>Hello, my name is Sally! </h1>
+        </div>
         <p>I am an aspiring developer. Here are some of my projects to date.</p>
         <div id="view-project-button"> 
             <a href="#projects">View My Work</a>
@@ -43,8 +45,7 @@
                 <section id="skills">
                     <div class="skill-button">HTML/CSS</div>
                     <div class="skill-button">JavaScript</div>
-                    <div class="skill-button">Placeholder 1</div>
-                    <div class="skill-button">Placeholder 2</div>
+                    <div class="skill-button">React</div>
                 </section>
             </div>
         </div>
