--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="typewriter">
             <h1>Hello, my name is Sally! </h1>
         </div>
-        <p>I am an aspiring developer. Here are some of my projects to date.</p>
+        <p class="typewriter-p">I am an aspiring developer. Here are some of my projects to date.</p>
         <div id="view-project-button"> 
             <a href="#projects">View My Work</a>
         </div>
