baby steps to creating a light and dark mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <li><a href="#contacts">Contact</a></li>
         </ul>
     </nav>
+
+    <button id="theme-switch">
+        
+    </button>
     
     <section id="welcome">
         <div class="typewriter">
