--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="darkmode">
     <nav id="navbar">
         <ul>
             <li><a href="#welcome">Home</a></li>
