added comments to explain my code

--- a/index.html
+++ b/index.html
@@ -110,5 +110,7 @@
         <a href="https://www.linkedin.com/in/sally-mei-bird01" target="_blank">LinkedIn</a>
     </section>
 
+    <script src="script.js"></script> 
+
 </body>
 </html>
