created two variables for local storing and an if-else statement to toggle dark mode

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         <a href="https://www.linkedin.com/in/sally-mei-bird01" target="_blank">LinkedIn</a>
     </section>
 
-    <script src="script.js"></script> 
+    <script src="script.js" type="text/JavaScript" defer></script> 
+    <!-- "type" here means storing in local storage; 
+    "defer" allows the js code to happen only after the HTML loads -->
 
 </body>
 </html>
